--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-1 pt-1 my-lg-5 pt-lg-5" data-aos="fade-in">
-                  <span class="text-muted text-uppercase">Designer / Developer</span>
+                  <span class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
                   <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
                 </div>
               </div>
