--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
               <li><a href="#home" class="nav-link">Home</a></li>
               <li><a href="#about" class="nav-link">About</a></li>
               <li><a href="#experience" class="nav-link">Experience</a></li>
-              <li><a href="#portfolio" class="nav-link">Works</a></li>
+              <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
               <li><a href="#contact" class="nav-link">Contact</a></li>
               <li>
                 <a class="nav-link btn-toggle d-flex justify-content-between align-items-center collapsed"
                   data-bs-toggle="collapse" data-bs-target="#pages-collapse" aria-expanded="false">
                   Pages
                 </a>
-                <div id="pages-collapse" class="collapse">
+                <!--<div id="pages-collapse" class="collapse">
                   <ul class="list-unstyled py-3">
                     <li>
                       <a href="single-post.html">Single Post <span class="badge bg-primary">PRO</span></a>
@@ -211,16 +211,16 @@
                       <a href="styles.html">Styles <span class="badge bg-primary">PRO</span></a>
                     </li>
                   </ul>
-                </div>
+                </div>-->
               </li>
-              <li><a href="https://templatesjungle.gumroad.com/l/julia-onepage-portfolio" target="_blank"
+             <!-- <li><a href="https://templatesjungle.gumroad.com/l/julia-onepage-portfolio" target="_blank"
                   class="nav-link d-flex justify-content-between align-items-center fw-bold"><span>Get
                     PRO</span> <svg width="18" height="18" viewBox="0 0 24 24">
                     <use xlink:href="#cart"></use>
                   </svg></a></li>
             </ul>
           </nav>
-        </div>
+        </div>-->
         <div class="mt-5">
           <div class="email-links">
             <a href="mailto:contact@yoursite.com" class="py-3 my-3 border-bottom d-flex">contact@yoursite.com</a>
