--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
               <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
               <li><a href="#contact" class="nav-link">Contact</a></li>
               <li>
-                <a class="nav-link btn-toggle d-flex justify-content-between align-items-center collapsed"
+                 <!--a class="nav-link btn-toggle d-flex justify-content-between align-items-center collapsed"
                   data-bs-toggle="collapse" data-bs-target="#pages-collapse" aria-expanded="false">
                   Pages
                 </a>
-                <!--<div id="pages-collapse" class="collapse">
+               <div id="pages-collapse" class="collapse">
                   <ul class="list-unstyled py-3">
                     <li>
                       <a href="single-post.html">Single Post <span class="badge bg-primary">PRO</span></a>
@@ -223,48 +223,18 @@
         </div>-->
         <div class="mt-5">
           <div class="email-links">
-            <a href="mailto:contact@yoursite.com" class="py-3 my-3 border-bottom d-flex">contact@yoursite.com</a>
+            <a href="mailto:saadusm2000@gmail.com" class="py-3 my-3 border-bottom d-flex">saadusm2000@gmail.com</a>
           </div>
           <ul class="list-unstyled d-flex justify-content-start flex-wrap gap-3">
             <li>
-              <a href="#" class="text-dark">
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#facebook"></use>
-                </svg>
-              </a>
-            </li>
             <li>
-              <a href="#" class="text-dark">
+              <a href="https://www.linkedin.com/in/saadusm/" class="text-dark">
                 <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#youtube"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#pinterest"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">
-                <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#instagram"></use>
+                  <use xlink:href="#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
-          <div class="py-4 border-top">
-            <p>HTML by <a href="https://templatesjungle.com/" target="_blank">TemplatesJungle</a></p>
-          </div>
         </div>
       </div>
     </header>
