--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <li>
               <a href="https://www.linkedin.com/in/saadusm/" class="text-dark">
                 <svg width="24" height="24" viewBox="0 0 24 24">
-                  <use xlink:href="#linkedin"></use>
+                  <use xlink:href="#instagram"></use>
                 </svg>
               </a>
             </li>
