--- a/index.html
+++ b/index.html
@@ -267,26 +267,33 @@
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up">
                   <span>01</span>
-                  <h3 class="sub-heading">UI/UX Design</h3>
-                  <p>At in proin consequat ut cursus venenatis sapien.</p>
+                  <h3 class="sub-heading">ML Engineering</h3>
+                  <p>I focus on understanding how a model works and why it is suitable for a particular machine learning task. I enjoy studying time-series models like ARIMA & SARIMAX for their predictive capabilities.</p>
                 </div>
               </div>
+	                    <div class="col-lg-3">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                  <span>02</span>
+                  <h3 class="sub-heading">AI & LLMs</h3>
+                  <p>Perhaps the most exciting field for me as an ML Engineer. I have dived deep into RAG systems and how they can be localized at an enterprise level. GenAI is a thing of the past at this point, the future is enterprise-level localized RAG systems.</p>
+                </div>
+              </div>	
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <span>02</span>
-                  <h3 class="sub-heading">Illustration</h3>
-                  <p>At in proin consequat ut cursus venenatis sapien.</p>
+                  <h3 class="sub-heading">Data Science</h3>
+                  <p>Working with real, messy datasets helped me develop a deep appreciation for wrangling and pre-processing. In my projects, this would create the basis for stronger statistical analysis and inferences.</p>
                 </div>
               </div>
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                   <span>03</span>
-                  <h3 class="sub-heading">Graphic Design</h3>
-                  <p>At in proin consequat ut cursus venenatis sapien.</p>
+                  <h3 class="sub-heading">Marketing/Communications</h3>
+                  <p>With 3 years of digital marketing and communications experience with a strong grasp of tools like Meta Advertising and Google Analytics, I am able to tell data-driven stories in a way that is digestible and easy to understand.</p>
                 </div>
               </div>
               <div class="col-lg-3">
-                <a href="#portfolio" class="btn btn-dark text-uppercase py-4 px-5" data-aos="fade-up" data-aos-delay="300">View All Work</a>
+                <a href="#portfolio" class="btn btn-dark text-uppercase py-4 px-5" data-aos="fade-up" data-aos-delay="300">Scroll to portfolio</a>
               </div>
             </div>
           </section>
