--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
               <div class="col-lg-6">
                 <div class="banner-content my-1 pt-1 my-lg-5 pt-lg-5" data-aos="fade-in">
                   <span class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
-                  <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
+                  <h2 class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h2>
                 </div>
               </div>
             </div>
@@ -385,11 +385,11 @@
                       </tr>
                       <tr>
                         <th>E-mail</th>
-                        <td><a href="#">hello@yourwebsite.com</a></td>
+                        <td><a href="#">saadusm2000@gmail.com</a></td>
                       </tr>
                       <tr class="no-border-bottom">
                         <th>Phone</th>
-                        <td>+2345 344 678 563</td>
+                        <td>+1 437 660 8407</td>
                       </tr>
                     </tbody>
                   </table>
