--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </div>
           <ul class="list-unstyled d-flex justify-content-start flex-wrap gap-3">
             <li>
-              <a href="https://www.linkedin.com/in/saadusm/" class="text-dark">
+              <a href="https://www.linkedin.com/in/saadusm/" class="text-dark" target="_blank" rel="noopener noreferrer">
                 <svg width="40" height="40" viewBox="0 0 40 40">
                   <use xlink:href="#linkedin"></use>
                 </svg>
@@ -255,7 +255,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-1 pt-1 my-lg-5 pt-lg-5" data-aos="fade-in">
-                  <span style="font-size: 20px;" class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
+                  <span style="font-size: 15px;" class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
                   <h1 style="font-size: 80px;" class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
                 </div>
               </div>
