--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="navigation">
           <div class="site-logo mt-5">
             <a href="index.html">
-              <img src="images/main-logo.png" alt="logo" class="img-fluid">
+              <img src="images/saad-logo.png" alt="logo" class="img-fluid">
             </a>
           </div>
 
