--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="banner-image text-center" data-aos="fade-right">
-                  <img src="images/Saad-edited.png" alt="banner" class="img-fluid" class="img-fluid">
+                  <img src="images/Saad_edited.png" alt="banner" class="img-fluid" class="img-fluid">
                 </div>
               </div>
               <div class="col-lg-6">
