--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <style>
+    .banner-title {
+      font-size: clamp(32px, 8vw, 80px);
+    }
+
+    .title-subtext {
+      font-size: clamp(10px, 2.5vw, 15px);
+    }
+  </style>
   <title>Saad Usmani - ML/Data Science</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -255,8 +264,8 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-1 pt-1 my-lg-5 pt-lg-5" data-aos="fade-in">
-                  <span style="font-size: 15px;" class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
-                  <h1 style="font-size: 80px;" class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
+                  <span class="text-muted text-uppercase">Machine Learning Engineer / Data Scientist</span>
+                  <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
                 </div>
               </div>
             </div>
