--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
   <style>
   @media (max-width: 768px) {
-    .title-subtext {
-      font-size: 10px !important;
+    .text-muted text-uppercase {
+      font-size: 12px !important;
     }
 
-    .banner-title {
+    .banner-title display-xl lh-1 txt-fx slide-up {
       font-size: 60px !important;
     }
   }
 
   @media (max-width: 480px) {
-    .title-subtext {
-      font-size: 8px !important;
+    .text-muted text-uppercase {
+      font-size: 10px !important;
     }
 
-    .banner-title {
+    .banner-title display-xl lh-1 txt-fx slide-up {
       font-size: 50px !important;
     }
   }
