--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-1 pt-1 my-lg-5 pt-lg-5" data-aos="fade-in">
-                  <span style="font-size: 15px;" class="fw-bold text-secondary text-uppercase">Machine Learning Engineer / Data Scientist</span>
+                  <span style="font-size: 15px;" class="fw-bold text-dark text-uppercase">Machine Learning Engineer / Data Scientist</span>
                   <h1 style="font-size: 80px;" class="banner-title display-xl lh-1 txt-fx slide-up">Saad Usmani</h1>
                 </div>
               </div>
