--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <style>
   @media (max-width: 768px) {
-    .text-muted {
-      font-size: 12px !important;
+    .fw-bold {
+      font-size: 13px !important;
     }
 
     .banner-title {
@@ -14,8 +14,8 @@
   }
 
   @media (max-width: 480px) {
-    .text-muted {
-      font-size: 11px !important;
+    .fw-bold {
+      font-size: 12px !important;
     }
 
     .banner-title {
