--- a/index.html
+++ b/index.html
@@ -287,28 +287,28 @@
                 <div class="icon-box" data-aos="fade-up">
                   <span>01</span>
                   <h3 class="sub-heading">ML Engineering</h3>
-                  <p>I focus on understanding how a model works and why it is suitable for a particular machine learning task. I enjoy studying time-series models like ARIMA & SARIMAX for their predictive capabilities.</p>
+                  <p>I focus on understanding how a model works and why it is suitable for a particular machine learning task. I've studied and implemented time-series models like SARIMAX for their predictive capabilities.</p>
                 </div>
               </div>
 	                    <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <span>02</span>
                   <h3 class="sub-heading">AI & LLMs</h3>
-                  <p>Perhaps the most exciting field for me as an ML Engineer. I have dived deep into RAG systems and how they can be localized at an enterprise level. GenAI is a thing of the past at this point, the future is enterprise-level localized RAG systems.</p>
+                  <p>Perhaps the most exciting field for me as an ML Engineer. I have dived deep into RAG systems and how they can be localized at an enterprise level to help employees improve productivity and quality.</p>
                 </div>
               </div>	
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <span>02</span>
                   <h3 class="sub-heading">Data Science</h3>
-                  <p>Working with real, messy datasets helped me develop a deep appreciation for wrangling and pre-processing. In my projects, this would create the basis for stronger statistical analysis and inferences.</p>
+                  <p>Handling real, messy datasets gave me a strong appreciation for data wrangling and pre-processing. In my projects, this foundational work enabled more robust statistical analysis and reliable inferences.</p>
                 </div>
               </div>
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                   <span>03</span>
                   <h3 class="sub-heading">Marketing/Communications</h3>
-                  <p>With 3 years of digital marketing and communications experience with a strong grasp of tools like Meta Advertising and Google Analytics, I am able to tell data-driven stories in a way that is digestible and easy to understand.</p>
+                  <p>I specialize in turning data into clear, compelling stories that are easy to understand, drawing on 3 years of experience in digital marketing and communications, along with a strong command of tools like Meta Advertising and Google Analytics.</p>
                 </div>
               </div>
               <div class="col-lg-3">
@@ -320,21 +320,21 @@
           <section id="about" class="my-5 py-5 bg-text" data-text="02">
             <div class="row d-flex flex-wrap" data-aos="fade-up">
               <div class="col-lg-6 pb-5">
-                <span class="text-muted text-uppercase">BIODATA</span>
+                <!--<span class="text-muted text-uppercase">BIODATA</span>-->
                 <h2 class="display-4 txt-fx slide-up">Education</h2>
                 <div class="data-info py-3" data-aos="fade-up">
-                  <span class="meta-date">1998 - 2004</span>
-                  <h3 class="info-title">Bachelors in Engineering in Information Technology</h3>
-                  <p>Harvard School of Science and management</p>
+                  <span class="meta-date">2024 - 2025</span>
+                  <h3 class="info-title">Post-Graduate in Data Science</h3>
+                  <p>Southern Alberta Institute of Technology (SAIT)</p>
                 </div>
                 <div class="data-info" data-aos="fade-up" data-aos-delay="100">
-                  <span class="meta-date">2004 - 2006</span>
-                  <h3 class="info-title">Masters in Data Analysis</h3>
-                  <p>Harvard School of Science and management</p>
+                  <span class="meta-date">2023 - 2024</span>
+                  <h3 class="info-title">Post-Graduate in Marketing Management</h3>
+                  <p>Fanshawe College</p>
                 </div>
               </div>
               <div class="col-lg-6 pb-5">
-                <h2 class="display-4 txt-fx slide-up">Experiences</h2>
+                <h2 class="display-4 txt-fx slide-up">Experience</h2>
                 <div class="data-info py-3" data-aos="fade-up" data-aos-delay="200">
                   <span class="meta-date">2007 - 2012</span>
                   <h3 class="info-title">Creative Agency Inc.: Design head</h3>
