--- a/index.html
+++ b/index.html
@@ -468,6 +468,162 @@
             </div>
           </section>
 
+ <main class="col-lg-10 offset-lg-2">
+      <div class="container">
+        <div class="justify-content-center p-1 m-1 p-md-5 m-md-5">
+
+          <div class="row justify-content-center">
+
+            <div class="col-lg-6 mt-5 pt-5" data-aos="fade-up">
+              <div class="section-header text-center">
+                <span class="text-muted text-uppercase">Recent Works</span>
+                <h1 class="display-1 txt-fx slide-up">Portfolio</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit commodi hic facere
+                  excepturi amet velit nobis, optio dolore at distinctio molestias tempore error est animi vel
+                  culpa!</p>
+              </div><!--section-header-->
+            </div>
+
+            <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
+              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".fashion">Fashion</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".portrait">Portrait</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".urban">Urban</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".events">Events</a>
+            </div>
+
+          </div>
+
+          <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
+            <div class="col mb-4 portfolio-item fashion urban">
+              <a href="images/portfolio-large-1.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 1."><img src="images/portfolio-thumbnail-1.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion portrait events">
+              <a href="images/portfolio-large-2.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 2."><img src="images/portfolio-thumbnail-2.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait fashion">
+              <a href="images/portfolio-large-3.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 3."><img src="images/portfolio-thumbnail-3.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion">
+              <a href="images/portfolio-large-4.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 4."><img src="images/portfolio-thumbnail-4.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban events">
+              <a href="images/portfolio-large-5.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 5."><img src="images/portfolio-thumbnail-5.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban">
+              <a href="images/portfolio-large-6.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 6."><img src="images/portfolio-thumbnail-6.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban portrait">
+              <a href="images/portfolio-large-7.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 7."><img src="images/portfolio-thumbnail-7.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait events">
+              <a href="images/portfolio-large-8.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 8."><img src="images/portfolio-thumbnail-8.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item events urban fashion">
+              <a href="images/portfolio-large-9.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 9."><img src="images/portfolio-thumbnail-9.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item events portrait fashion">
+              <a href="images/portfolio-large-10.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 0."><img src="images/portfolio-thumbnail-10.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion">
+              <a href="images/portfolio-large-11.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 1."><img src="images/portfolio-thumbnail-11.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait events">
+              <a href="images/portfolio-large-12.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 2."><img src="images/portfolio-thumbnail-12.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion urban">
+              <a href="images/portfolio-large-1.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 1."><img src="images/portfolio-thumbnail-1.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion portrait events">
+              <a href="images/portfolio-large-2.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 2."><img src="images/portfolio-thumbnail-2.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait fashion">
+              <a href="images/portfolio-large-3.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 3."><img src="images/portfolio-thumbnail-3.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion">
+              <a href="images/portfolio-large-4.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 4."><img src="images/portfolio-thumbnail-4.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban events">
+              <a href="images/portfolio-large-5.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 5."><img src="images/portfolio-thumbnail-5.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban">
+              <a href="images/portfolio-large-6.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 6."><img src="images/portfolio-thumbnail-6.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item urban portrait">
+              <a href="images/portfolio-large-7.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 7."><img src="images/portfolio-thumbnail-7.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait events">
+              <a href="images/portfolio-large-8.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 8."><img src="images/portfolio-thumbnail-8.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item events urban fashion">
+              <a href="images/portfolio-large-9.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item 9."><img src="images/portfolio-thumbnail-9.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item events portrait fashion">
+              <a href="images/portfolio-large-10.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 0."><img src="images/portfolio-thumbnail-10.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item fashion">
+              <a href="images/portfolio-large-11.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 1."><img src="images/portfolio-thumbnail-11.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+            <div class="col mb-4 portfolio-item portrait events">
+              <a href="images/portfolio-large-12.jpg" class="image-link"
+                title="Sample Caption goes here for Portfolio Item1 2."><img src="images/portfolio-thumbnail-12.jpg"
+                  class="img-fluid" alt="portfolio"></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </main>
+
+  </div>
+
+
+		
           <section id="portfolio" class="my-5 py-5 bg-text" data-text="04">
             <div class="section-header my-5" data-aos="fade-up">
               <div class="row justify-content-center g-5">
