--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="section-header my-5" data-aos="fade-up">
               <div class="row justify-content-center g-5">
                 <div class="col-lg-4">
-                  <span class="text-muted text-uppercase">some of my recent works</span>
+                  <span class="text-muted text-uppercase">Some of my recent projects</span>
                   <h2 class="display-1 txt-fx slide-up">Portfolio</h2>
                 </div>
                 <div class="col-lg-4" data-aos="fade-up">
@@ -617,7 +617,7 @@
 
         </div>
       </div>
-    </main>
+   
 
   </div>
 	</section>
