--- a/index.html
+++ b/index.html
@@ -484,51 +484,52 @@
             </div>
 
 	    <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
-              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".fashion">Fashion</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".portrait">Portrait</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".urban">Urban</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".events">Events</a>
+              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning/a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing/Communications</a>
             </div>
 
           
 
           <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
-            <div class="col mb-4 portfolio-item fashion urban">
+            <div class="col mb-4 portfolio-item ml ds">
               <a href="images/portfolio-large-1.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 1."><img src="images/portfolio-thumbnail-1.jpg"
+                title="Time-series SARIMAX model to predict Air Quality Health Index across Calgary"><img src="images/portfolio-thumbnail-1.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item fashion portrait events">
+            <div class="col mb-4 portfolio-item ai ml">
               <a href="images/portfolio-large-2.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 2."><img src="images/portfolio-thumbnail-2.jpg"
+                title="Retrieval Augmented Generation system (RAG) trained on ME to answer questions about ME!"><img src="images/portfolio-thumbnail-2.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item portrait fashion">
+            <div class="col mb-4 portfolio-item ml ds ai">
               <a href="images/portfolio-large-3.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 3."><img src="images/portfolio-thumbnail-3.jpg"
+                title="Generative Adversarial Network (GAN) that produces social media ready images for posting."><img src="images/portfolio-thumbnail-3.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item fashion">
+            <div class="col mb-4 portfolio-item ds ml">
               <a href="images/portfolio-large-4.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 4."><img src="images/portfolio-thumbnail-4.jpg"
+                title="An XGBoost model to predict geohashed locations of future wildfires across Alberta."><img src="images/portfolio-thumbnail-4.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item urban events">
+            <div class="col mb-4 portfolio-item ds marcom">
               <a href="images/portfolio-large-5.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 5."><img src="images/portfolio-thumbnail-5.jpg"
+                title="A PowerBI dashboard showcasing an in-depth analysis of wildfires across Alberta."><img src="images/portfolio-thumbnail-5.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item urban">
+            <div class="col mb-4 portfolio-item marcom">
               <a href="images/portfolio-large-6.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 6."><img src="images/portfolio-thumbnail-6.jpg"
+                title="Digital marketing strategy for a startup in Canada using Meta, TikTok, Google Ads & Analytics, Canva, Premiere Pro."><img src="images/portfolio-thumbnail-6.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item urban portrait">
+            <div class="col mb-4 portfolio-item marcom">
               <a href="images/portfolio-large-7.jpg" class="image-link"
-                title="Sample Caption goes here for Portfolio Item 7."><img src="images/portfolio-thumbnail-7.jpg"
+                title="Digital footprint audit and marketing strategy for a non-profit, Photographers Without Borders."><img src="images/portfolio-thumbnail-7.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
-            <div class="col mb-4 portfolio-item portrait events">
+		  
+            <!---<div class="col mb-4 portfolio-item portrait events">
               <a href="images/portfolio-large-8.jpg" class="image-link"
                 title="Sample Caption goes here for Portfolio Item 8."><img src="images/portfolio-thumbnail-8.jpg"
                   class="img-fluid" alt="portfolio"></a>
@@ -612,7 +613,7 @@
               <a href="images/portfolio-large-12.jpg" class="image-link"
                 title="Sample Caption goes here for Portfolio Item1 2."><img src="images/portfolio-thumbnail-12.jpg"
                   class="img-fluid" alt="portfolio"></a>
-            </div>
+            </div>-->
           </div>
 
         </div>
