--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             </div>
 
 	    <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
-              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning/a>
+              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing/Communications</a>
@@ -632,7 +632,7 @@
   <script src="js/script.js"></script>
          
 
-          <section id="contact" class="my-5 py-5 bg-text" data-text="05">
+  <section id="contact" class="my-5 py-5 bg-text" data-text="05">
             <div class="container">
               <div class="row justify-content-center mb-5">
                 <div class="col-lg-6" data-aos="fade-up">
