--- a/index.html
+++ b/index.html
@@ -487,12 +487,10 @@
               <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing/Communications</a>
+              <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing & Communications</a>
             </div>
 
-          
-
-          <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
+            <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
             <div class="col mb-4 portfolio-item ml ds">
               <a href="images/portfolio-large-1.jpg" class="image-link"
                 title="Time-series SARIMAX model to predict Air Quality Health Index across Calgary"><img src="images/portfolio-thumbnail-1.jpg"
