--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
       </div>
    
 
-  </div>
+  <!--</div>-->
 	</section>
 
   <script src="js/jquery-1.11.0.min.js"></script>
@@ -630,7 +630,7 @@
   <script src="js/script.js"></script>
          
 
-  <section id="contact" class="my-5 py-5 bg-text" data-text="05">
+  	  <section id="contact" class="my-5 py-5 bg-text" data-text="05">
             <div class="container">
               <div class="row justify-content-center mb-5">
                 <div class="col-lg-6" data-aos="fade-up">
