--- a/index.html
+++ b/index.html
@@ -467,8 +467,6 @@
               </div>
             </div>
           </section>
-
-		
           <section id="portfolio" class="my-5 py-5 bg-text" data-text="04">
             <div class="section-header my-5" data-aos="fade-up">
               <div class="row justify-content-center g-5">
@@ -482,8 +480,8 @@
                 </div>
               </div>
             </div>
-
 	    <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
+		      <p class="text-muted text-uppercase mb-3">Use filters here:</p>
               <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
