--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               </div>
             </div>
 	    <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
-		      <p class="text-muted text-uppercase mb-3">Use filters here:</p>
+		      <div <p class="text-muted text-uppercase mb-3">Use filters here:</p> </div>
               <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
               <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
