--- a/index.html
+++ b/index.html
@@ -480,14 +480,15 @@
                 </div>
               </div>
             </div>
-	    <div id="filters" class="button-group d-flex gap-4 justify-content-center py-5" data-aos="fade-up">
-		      <div class="text-muted text-uppercase">Use filters here:</div>
-              <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
-              <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing & Communications</a>
-            </div>
-
+	    <div id="filters" class="button-group d-flex flex-column align-items-center gap-4 py-5" data-aos="fade-up">
+		  <div class="text-muted text-uppercase">Use filters here:</div>
+		  <div class="d-flex gap-4 justify-content-center flex-wrap">
+		    <a href="#" class="text-decoration-none text-uppercase is-checked" data-filter=".ml">Machine Learning</a>
+		    <a href="#" class="text-decoration-none text-uppercase" data-filter=".ds">Data Science</a>
+		    <a href="#" class="text-decoration-none text-uppercase" data-filter=".ai">AI & LLMs</a>
+		    <a href="#" class="text-decoration-none text-uppercase" data-filter=".marcom">Marketing & Communications</a>
+		  </div>
+		</div>
             <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
             <div class="col mb-4 portfolio-item ml ds">
               <a href="images/portfolio-large-1.jpg" class="image-link"
