--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 </div>
                 <div class="col-lg-4" data-aos="fade-up">
                   <p>Labore accusam in modo compungi, iacentem substantiales um se sed esse haec.</p>
-                  <a href="portfolio-masonry.html" class="btn btn-dark px-5 py-4">View All</a>
+                  <a href="portfolio-masonry.html" class="btn btn-dark px-5 py-3">View All</a>
                 </div>
               </div>
             </div>
@@ -492,7 +492,7 @@
 		</div>
             <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
             <div class="col mb-4 portfolio-item ml ds">
-              <a href="images/portfolio-large-1.jpg" class="image-link"
+              <a href="project-aqhi.html" class="image-link"
                 title="Time-series SARIMAX model to predict Air Quality Health Index across Calgary"><img src="images/portfolio-thumbnail-1.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
@@ -630,7 +630,7 @@
   <script src="js/script.js"></script>
          
 
-  	  <section id="contact" class="my-5 py-5 bg-text" data-text="05">
+  	  <section id="contact" class="my-3 py-3 bg-text" data-text="05">
             <div class="container">
               <div class="row justify-content-center mb-5">
                 <div class="col-lg-6" data-aos="fade-up">
@@ -639,7 +639,7 @@
                   <p>Labore accusam in modo compungi, iacentem substantiales um se sed esse haec.</p>
                 </div>
               </div>
-              <div class="row d-flex g-5">
+              <div class="row d-flex g-3">
                 <div class="col-lg-7" data-aos="fade-up">
                   <h3>Frequently Asked Questions</h3>
                   <div class="accordion" id="accordionExample2">
