--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 		</div>
             <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
             <div class="col mb-4 portfolio-item ml ds">
-              <a href="project-aqhi.html" class="image-link"
+              <a href="project-aqhi.html" class="nav-link"
                 title="Time-series SARIMAX model to predict Air Quality Health Index across Calgary"><img src="images/portfolio-thumbnail-1.jpg"
                   class="img-fluid" alt="portfolio"></a>
             </div>
