--- a/index.html
+++ b/index.html
@@ -493,8 +493,10 @@
             <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
             <div class="col mb-4 portfolio-item ml ds">
               <a href="project-aqhi.html" class="nav-link"
-                title="Time-series SARIMAX model to predict Air Quality Health Index across Calgary"><img src="images/portfolio-thumbnail-1.jpg"
-                  class="img-fluid" alt="portfolio"></a>
+               <img src="images/portfolio-thumbnail-1.jpg" class="img-fluid" alt="portfolio">
+		      <div class="portfolio-caption mt-2 text-center text-muted small">
+		Time-series SARIMAX model to predict Air Quality Health Index across Calgary"> </div>
+	       </a>
             </div>
             <div class="col mb-4 portfolio-item ai ml">
               <a href="images/portfolio-large-2.jpg" class="image-link"
