--- a/index.html
+++ b/index.html
@@ -491,11 +491,13 @@
 		  </div>
 		</div>
             <div class="grid p-0 clearfix row row-cols-2 row-cols-lg-3 row-cols-xl-4" data-aos="fade-up">
+		    
             <div class="col mb-4 portfolio-item ml ds">
-              <a href="project-aqhi.html" class="nav-link"
+              <a href="project-aqhi.html" class="nav-link">
                <img src="images/portfolio-thumbnail-1.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
-		Time-series SARIMAX model to predict Air Quality Health Index across Calgary"> </div>
+		Time-series SARIMAX model to predict Air Quality Health Index across Calgary"> 
+		      </div>
 	       </a>
             </div>
             <div class="col mb-4 portfolio-item ai ml">
