--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item ai ml">
-		    <a href="images/portfolio-large-2.jpg" class="image-link">
+		    <a href="images/portfolio-large-2.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-2.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        Retrieval Augmented Generation system (RAG) trained on ME to answer questions about ME!
@@ -511,7 +511,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item ml ds ai">
-		    <a href="images/portfolio-large-3.jpg" class="image-link">
+		    <a href="images/portfolio-large-3.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-3.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        Generative Adversarial Network (GAN) that produces social media ready images for posting.
@@ -520,7 +520,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item ds ml">
-		    <a href="images/portfolio-large-4.jpg" class="image-link">
+		    <a href="images/portfolio-large-4.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-4.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        An XGBoost model to predict geohashed locations of future wildfires across Alberta.
@@ -529,7 +529,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item ds marcom">
-		    <a href="images/portfolio-large-5.jpg" class="image-link">
+		    <a href="images/portfolio-large-5.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-5.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        A PowerBI dashboard showcasing an in-depth analysis of wildfires across Alberta.
@@ -538,7 +538,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item marcom">
-		    <a href="images/portfolio-large-6.jpg" class="image-link">
+		    <a href="images/portfolio-large-6.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-6.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        Digital marketing strategy for a startup in Canada using Meta, TikTok, Google Ads & Analytics, Canva, Premiere Pro.
@@ -547,7 +547,7 @@
 		  </div>
 		
 		  <div class="col mb-4 portfolio-item marcom">
-		    <a href="images/portfolio-large-7.jpg" class="image-link">
+		    <a href="images/portfolio-large-7.jpg" class="nav-link">
 		      <img src="images/portfolio-thumbnail-7.jpg" class="img-fluid" alt="portfolio">
 		      <div class="portfolio-caption mt-2 text-center text-muted small">
 		        Digital footprint audit and marketing strategy for a non-profit, Photographers Without Borders.
